--- a/Speart/src/controlador/reportes/ReporteCompUniv.jrxml
+++ b/Speart/src/controlador/reportes/ReporteCompUniv.jrxml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report name" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="ae4650ca-1adb-4ae3-96cd-1b512e72910d">
 	<property name="ireport.zoom" value="2.0"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="144"/>
+	<property name="ireport.y" value="0"/>
 	<field name="nombreDestrezaUniv" class="java.lang.String"/>
 	<field name="altaUniv" class="java.lang.String"/>
 	<field name="mediaUniv" class="java.lang.String"/>
@@ -13,29 +13,29 @@
 	<title>
 		<band height="79" splitType="Stretch">
 			<staticText>
-				<reportElement x="90" y="29" width="398" height="20" uuid="e5a49b6b-ca54-4d35-8c6b-9bcbcbc4e97f"/>
+				<reportElement uuid="e5a49b6b-ca54-4d35-8c6b-9bcbcbc4e97f" x="90" y="29" width="398" height="20"/>
 				<textElement textAlignment="Justified" verticalAlignment="Middle">
 					<font size="14" isBold="true"/>
 				</textElement>
 				<text><![CDATA[INSTITUTO ECUATORIANO DE SEGURIDAD SOCIAL]]></text>
 			</staticText>
 			<image>
-				<reportElement x="0" y="0" width="88" height="79" uuid="7dc60d11-789b-4052-a660-64587a331116"/>
-				<imageExpression><![CDATA["/home/francisco/NetBeansProjects/Speart/src/vista/imagenes/iess2.jpg"]]></imageExpression>
+				<reportElement uuid="5146fe0b-2f35-4965-9914-413c40eab296" x="0" y="0" width="80" height="65"/>
+				<imageExpression><![CDATA["D:\\Documents\\NetBeansProjects\\Speart\\src\\controlador\\reportes\\LOGO.png"]]></imageExpression>
 			</image>
 		</band>
 	</title>
 	<pageHeader>
 		<band height="58" splitType="Stretch">
 			<staticText>
-				<reportElement x="165" y="4" width="224" height="20" uuid="0a5c1d1f-dd30-48a8-8eac-efb6ee2d2647"/>
+				<reportElement uuid="0a5c1d1f-dd30-48a8-8eac-efb6ee2d2647" x="165" y="4" width="224" height="20"/>
 				<textElement textAlignment="Justified" verticalAlignment="Middle">
 					<font size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[DIRECCIÓN PROVINCIAL DE LOJA]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="116" y="33" width="318" height="20" uuid="ec0db62b-5467-4efb-a987-b9da30ba4a47"/>
+				<reportElement uuid="ec0db62b-5467-4efb-a987-b9da30ba4a47" x="116" y="33" width="318" height="20"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="10" isBold="true"/>
 				</textElement>
@@ -46,28 +46,28 @@
 	<columnHeader>
 		<band height="30" splitType="Stretch">
 			<staticText>
-				<reportElement x="0" y="2" width="100" height="20" uuid="2cf12b61-a8c3-4690-8533-14c09dd8462a"/>
+				<reportElement uuid="2cf12b61-a8c3-4690-8533-14c09dd8462a" x="0" y="2" width="100" height="20"/>
 				<textElement textAlignment="Justified" verticalAlignment="Middle">
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[DESTREZA]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="152" y="2" width="100" height="20" uuid="90a31f0c-7c20-43f6-8eb6-f3e2529f694a"/>
+				<reportElement uuid="90a31f0c-7c20-43f6-8eb6-f3e2529f694a" x="152" y="2" width="100" height="20"/>
 				<textElement textAlignment="Justified" verticalAlignment="Middle">
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[ALTA]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="289" y="2" width="100" height="20" uuid="545c4e7e-3637-469a-afe8-26eb27794da5"/>
+				<reportElement uuid="545c4e7e-3637-469a-afe8-26eb27794da5" x="289" y="2" width="100" height="20"/>
 				<textElement textAlignment="Justified" verticalAlignment="Middle">
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[MEDIA]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="434" y="2" width="100" height="20" uuid="6a824a27-e59f-4022-9591-fd65153665c4"/>
+				<reportElement uuid="6a824a27-e59f-4022-9591-fd65153665c4" x="434" y="2" width="100" height="20"/>
 				<textElement textAlignment="Justified" verticalAlignment="Middle">
 					<font isBold="true"/>
 				</textElement>
@@ -78,22 +78,22 @@
 	<detail>
 		<band height="24" splitType="Stretch">
 			<textField>
-				<reportElement x="0" y="0" width="152" height="20" uuid="9e7792f9-ca03-410c-a630-ef3bbf524724"/>
+				<reportElement uuid="9e7792f9-ca03-410c-a630-ef3bbf524724" x="0" y="0" width="152" height="20"/>
 				<textElement textAlignment="Justified" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{nombreDestrezaUniv}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="152" y="0" width="137" height="20" uuid="64b25b1f-f96d-4f9e-920e-fd0b51bfc287"/>
+				<reportElement uuid="64b25b1f-f96d-4f9e-920e-fd0b51bfc287" x="152" y="0" width="137" height="20"/>
 				<textElement textAlignment="Justified" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{altaUniv}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="289" y="0" width="145" height="20" uuid="8bf7a95a-c983-45ce-94ba-9967c9d0a030"/>
+				<reportElement uuid="8bf7a95a-c983-45ce-94ba-9967c9d0a030" x="289" y="0" width="145" height="20"/>
 				<textElement textAlignment="Justified" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{mediaUniv}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="434" y="0" width="121" height="20" uuid="e1d0d88e-8ff3-44f5-a1ce-4c85de7de0ba"/>
+				<reportElement uuid="e1d0d88e-8ff3-44f5-a1ce-4c85de7de0ba" x="434" y="0" width="121" height="20"/>
 				<textElement textAlignment="Justified" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{bajaUniv}]]></textFieldExpression>
 			</textField>
