--- a/Speart/src/controlador/reportes/ReporteTrabEquip.jrxml
+++ b/Speart/src/controlador/reportes/ReporteTrabEquip.jrxml
@@ -2,7 +2,7 @@
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="report name" pageWidth="595" pageHeight="842" columnWidth="535" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="20" uuid="bf56e5f3-8be5-418a-98bd-bed953b1c2f1">
 	<property name="ireport.zoom" value="2.0"/>
 	<property name="ireport.x" value="0"/>
-	<property name="ireport.y" value="192"/>
+	<property name="ireport.y" value="0"/>
 	<field name="descripcionTrabEquipo" class="java.lang.String"/>
 	<field name="altaTrabEquipo" class="java.lang.String"/>
 	<field name="mediaTrabEquipo" class="java.lang.String"/>
@@ -12,30 +12,30 @@
 	</background>
 	<title>
 		<band height="79" splitType="Stretch">
-			<image>
-				<reportElement x="0" y="0" width="88" height="79" uuid="ad1b5e30-8812-40a6-afe6-85b62656de2f"/>
-				<imageExpression><![CDATA["/home/francisco/NetBeansProjects/Speart/src/vista/imagenes/iess2.jpg"]]></imageExpression>
-			</image>
 			<staticText>
-				<reportElement x="90" y="23" width="398" height="20" uuid="358d4bb7-4858-4a87-a211-3a926c7454d2"/>
+				<reportElement uuid="358d4bb7-4858-4a87-a211-3a926c7454d2" x="90" y="23" width="398" height="20"/>
 				<textElement textAlignment="Justified" verticalAlignment="Middle">
 					<font size="14" isBold="true"/>
 				</textElement>
 				<text><![CDATA[INSTITUTO ECUATORIANO DE SEGURIDAD SOCIAL]]></text>
 			</staticText>
+			<image>
+				<reportElement uuid="9f9ca859-8c2e-42d5-9fab-b62d8dcc40e0" x="0" y="0" width="90" height="75"/>
+				<imageExpression><![CDATA["D:\\Documents\\NetBeansProjects\\Speart\\src\\controlador\\reportes\\LOGO.png"]]></imageExpression>
+			</image>
 		</band>
 	</title>
 	<pageHeader>
 		<band height="66" splitType="Stretch">
 			<staticText>
-				<reportElement x="176" y="5" width="224" height="20" uuid="6dfe369c-f4be-4048-8a75-a7df7677f476"/>
+				<reportElement uuid="6dfe369c-f4be-4048-8a75-a7df7677f476" x="176" y="5" width="224" height="20"/>
 				<textElement textAlignment="Justified" verticalAlignment="Middle">
 					<font size="12" isBold="true"/>
 				</textElement>
 				<text><![CDATA[DIRECCIÓN PROVINCIAL DE LOJA]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="126" y="35" width="318" height="20" uuid="30f5ef6b-c167-444e-b1bf-936c1da7a545"/>
+				<reportElement uuid="30f5ef6b-c167-444e-b1bf-936c1da7a545" x="126" y="35" width="318" height="20"/>
 				<textElement textAlignment="Center" verticalAlignment="Middle">
 					<font size="10" isBold="true"/>
 				</textElement>
@@ -46,28 +46,28 @@
 	<columnHeader>
 		<band height="30" splitType="Stretch">
 			<staticText>
-				<reportElement x="0" y="4" width="100" height="20" uuid="f0c45db7-2cdc-4221-949c-f4e2f8608362"/>
+				<reportElement uuid="f0c45db7-2cdc-4221-949c-f4e2f8608362" x="0" y="4" width="100" height="20"/>
 				<textElement textAlignment="Justified" verticalAlignment="Middle">
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[DESCRIPCIÓN]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="424" y="4" width="100" height="20" uuid="66964255-9762-46e9-a1d8-de8d8ce58502"/>
+				<reportElement uuid="66964255-9762-46e9-a1d8-de8d8ce58502" x="424" y="4" width="100" height="20"/>
 				<textElement textAlignment="Justified" verticalAlignment="Middle">
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[BAJA]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="126" y="4" width="100" height="20" uuid="07b08e06-d3d3-4d4e-ba66-430a25b99ac4"/>
+				<reportElement uuid="07b08e06-d3d3-4d4e-ba66-430a25b99ac4" x="126" y="4" width="100" height="20"/>
 				<textElement textAlignment="Justified" verticalAlignment="Middle">
 					<font isBold="true"/>
 				</textElement>
 				<text><![CDATA[ALTA]]></text>
 			</staticText>
 			<staticText>
-				<reportElement x="275" y="4" width="100" height="20" uuid="fc8616f9-5081-4f6b-968a-6afc02a55fcc"/>
+				<reportElement uuid="fc8616f9-5081-4f6b-968a-6afc02a55fcc" x="275" y="4" width="100" height="20"/>
 				<textElement textAlignment="Justified" verticalAlignment="Middle">
 					<font isBold="true"/>
 				</textElement>
@@ -78,22 +78,22 @@
 	<detail>
 		<band height="22" splitType="Stretch">
 			<textField>
-				<reportElement x="0" y="0" width="126" height="20" uuid="5944ac6e-34e3-46cb-a622-26a911f5ce40"/>
+				<reportElement uuid="5944ac6e-34e3-46cb-a622-26a911f5ce40" x="0" y="0" width="126" height="20"/>
 				<textElement textAlignment="Justified" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{descripcionTrabEquipo}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="126" y="0" width="149" height="20" uuid="c3af968b-df28-4fd4-8f11-cda9cfee9fbb"/>
+				<reportElement uuid="c3af968b-df28-4fd4-8f11-cda9cfee9fbb" x="126" y="0" width="149" height="20"/>
 				<textElement textAlignment="Justified" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{altaTrabEquipo}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="275" y="0" width="149" height="20" uuid="eb184cd0-f3f3-4f55-b518-e4c71a0f08b7"/>
+				<reportElement uuid="eb184cd0-f3f3-4f55-b518-e4c71a0f08b7" x="275" y="0" width="149" height="20"/>
 				<textElement textAlignment="Justified" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{mediaTrabEquipo}]]></textFieldExpression>
 			</textField>
 			<textField>
-				<reportElement x="424" y="0" width="131" height="20" uuid="5bddc3db-32aa-4244-9d4b-461f29b43818"/>
+				<reportElement uuid="5bddc3db-32aa-4244-9d4b-461f29b43818" x="424" y="0" width="131" height="20"/>
 				<textElement textAlignment="Justified" verticalAlignment="Middle"/>
 				<textFieldExpression><![CDATA[$F{bajaTrabEquipo}]]></textFieldExpression>
 			</textField>
