--- a/Speart/src/vista/modelo/paneles/agenda/PanelActividad.form
+++ b/Speart/src/vista/modelo/paneles/agenda/PanelActividad.form
@@ -65,6 +65,9 @@
   <SubComponents>
     <Component class="javax.swing.JLabel" name="lblTiempo">
       <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Berlin Sans FB" size="12" style="0"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Dura:"/>
       </Properties>
       <Constraints>
@@ -75,6 +78,9 @@
     </Component>
     <Component class="javax.swing.JLabel" name="lblEncargado">
       <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Berlin Sans FB" size="12" style="0"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Encargado:"/>
       </Properties>
       <Constraints>
@@ -85,6 +91,9 @@
     </Component>
     <Component class="javax.swing.JLabel" name="lblHoraInicio">
       <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Berlin Sans FB" size="12" style="0"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Inicia:"/>
       </Properties>
       <Constraints>
@@ -95,6 +104,9 @@
     </Component>
     <Component class="javax.swing.JLabel" name="lblHpraTermina">
       <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Berlin Sans FB" size="12" style="0"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Termina:"/>
       </Properties>
       <Constraints>
@@ -105,6 +117,9 @@
     </Component>
     <Component class="javax.swing.JLabel" name="lblFecha">
       <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Berlin Sans FB" size="12" style="0"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Fecha:"/>
       </Properties>
       <Constraints>
@@ -115,6 +130,9 @@
     </Component>
     <Component class="javax.swing.JLabel" name="lblCargo">
       <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Berlin Sans FB" size="12" style="0"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Cargo:"/>
       </Properties>
       <Constraints>
@@ -125,6 +143,9 @@
     </Component>
     <Component class="javax.swing.JButton" name="btEditar">
       <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Berlin Sans FB" size="12" style="0"/>
+        </Property>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
           <Image iconType="3" name="/vista/imagenes/Edit.png"/>
         </Property>
@@ -141,6 +162,9 @@
     </Component>
     <Component class="javax.swing.JButton" name="btnEliminar">
       <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Berlin Sans FB" size="12" style="0"/>
+        </Property>
         <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
           <Image iconType="3" name="/vista/imagenes/salir_1.png"/>
         </Property>
@@ -173,6 +197,9 @@
     </Component>
     <Component class="javax.swing.JLabel" name="lbActividad">
       <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Berlin Sans FB" size="12" style="0"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Actividad:"/>
       </Properties>
       <Constraints>
@@ -183,6 +210,9 @@
     </Component>
     <Component class="javax.swing.JCheckBox" name="chbTerminada">
       <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Berlin Sans FB" size="12" style="0"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Terminada"/>
       </Properties>
       <Events>
@@ -196,11 +226,14 @@
     </Component>
     <Component class="javax.swing.JLabel" name="jLabel1">
       <Properties>
+        <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+          <Font name="Berlin Sans FB" size="12" style="0"/>
+        </Property>
         <Property name="text" type="java.lang.String" value="Total Hecho:"/>
       </Properties>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-          <AbsoluteConstraints x="100" y="50" width="-1" height="-1"/>
+          <AbsoluteConstraints x="100" y="50" width="70" height="-1"/>
         </Constraint>
       </Constraints>
     </Component>
