--- a/Speart/src/vista/paneles/operaciones/PnlOperaciones.form
+++ b/Speart/src/vista/paneles/operaciones/PnlOperaciones.form
@@ -55,7 +55,7 @@
               </Properties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="210" y="10" width="-1" height="-1"/>
+                  <AbsoluteConstraints x="280" y="0" width="-1" height="-1"/>
                 </Constraint>
               </Constraints>
 
@@ -180,7 +180,7 @@
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Berlin Sans FB" size="14" style="0"/>
                     </Property>
-                    <Property name="text" type="java.lang.String" value="                Escoja Seccion:"/>
+                    <Property name="text" type="java.lang.String" value="                Escoja Secci&#xf3;n:"/>
                   </Properties>
                   <Constraints>
                     <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
@@ -253,11 +253,11 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Berlin Sans FB" size="14" style="0"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="&lt;html&gt; Este m&#xf3;dulo permite realizar el ingreso de&lt;br&gt; de secciones, Competencias Tecnicas,&lt;br&gt; Comptencias Universales y Destrezas de Trabajo,&lt;br&gt; Iniciativa y Liderazgo  aqu&#xed; el Administrador podr&#xe1;&lt;br&gt; realizar las siguientes tareas: &lt;br&gt;&#xa;Ingresar preguntas, actualizar secci&#xf3;n, eliminar preguntas&lt;br&gt;ingresar, actualizar y eliminar competencia Tecnica  &lt;br&gt;ingresar, actualizar y eliminar  Competencia Universal &lt;br&gt; ingresar, actualizar y eliminar destreza  de Trabajo iniciativa y liderazgo &lt;/html&gt;&#xa;"/>
+                <Property name="text" type="java.lang.String" value="&lt;html&gt; Este m&#xf3;dulo permite realizar el ingreso de&lt;br&gt; de Secciones, Competencias Tecnicas,&lt;br&gt; Comptencias Universales y Destrezas de Trabajo,&lt;br&gt; Iniciativa y Liderazgo  aqu&#xed; el Administrador podr&#xe1;&lt;br&gt; realizar las siguientes tareas: &lt;br&gt;&#xa;ingresar preguntas, actualizar secci&#xf3;n, eliminar preguntas&lt;br&gt;ingresar, actualizar y eliminar competencia Tecnica  &lt;br&gt;ingresar, actualizar y eliminar  Competencia Universal &lt;br&gt; ingresar, actualizar y eliminar destreza  de Trabajo iniciativa y liderazgo &lt;/html&gt;&#xa;"/>
               </Properties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="10" y="170" width="170" height="330"/>
+                  <AbsoluteConstraints x="20" y="150" width="240" height="330"/>
                 </Constraint>
               </Constraints>
             </Component>
@@ -411,7 +411,7 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Berlin Sans FB" size="14" style="0"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="&lt;html&gt;Para editar una secci&#xf3;n seleccione de la caja &lt;br&gt; el &quot;Seci&#xf3;n &quot;  para actualizar su nombre  &lt;br&gt;y elija  siempre de esta tabla&lt;br&gt; la/s pregunta/s para poder eliminar su informaci&#xf3;n correspondiente  &lt;/html&gt;&#xa;&#xa;"/>
+                <Property name="text" type="java.lang.String" value="&lt;html&gt;Para editar una secci&#xf3;n seleccione de la caja &lt;br&gt; la &quot;Seci&#xf3;n &quot;  para actualizar su nombre  &lt;br&gt;y elija  siempre de esta tabla&lt;br&gt; la/s pregunta/s para poder eliminar su informaci&#xf3;n correspondiente  &lt;/html&gt;&#xa;&#xa;"/>
               </Properties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
@@ -711,6 +711,12 @@
                 </Component>
                 <Component class="javax.swing.JButton" name="btnReporteCT">
                   <Properties>
+                    <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                      <Font name="Berlin Sans FB" size="12" style="0"/>
+                    </Property>
+                    <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                      <Image iconType="3" name="/vista/imagenes/imprimir.png"/>
+                    </Property>
                     <Property name="text" type="java.lang.String" value="Reporte"/>
                   </Properties>
                   <Constraints>
@@ -1035,6 +1041,12 @@
                 </Component>
                 <Component class="javax.swing.JButton" name="btnReporteUniv">
                   <Properties>
+                    <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                      <Font name="Berlin Sans FB" size="12" style="0"/>
+                    </Property>
+                    <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                      <Image iconType="3" name="/vista/imagenes/imprimir.png"/>
+                    </Property>
                     <Property name="text" type="java.lang.String" value="Reporte"/>
                   </Properties>
                   <Constraints>
@@ -1321,7 +1333,7 @@
                   </Properties>
                   <Constraints>
                     <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                      <AbsoluteConstraints x="290" y="440" width="110" height="40"/>
+                      <AbsoluteConstraints x="290" y="440" width="120" height="40"/>
                     </Constraint>
                   </Constraints>
                 </Component>
@@ -1344,16 +1356,25 @@
                     <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                       <Font name="Berlin Sans FB" size="12" style="0"/>
                     </Property>
+                    <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                      <Image iconType="3" name="/vista/imagenes/salir_1.png"/>
+                    </Property>
                     <Property name="text" type="java.lang.String" value="Cancelar"/>
                   </Properties>
                   <Constraints>
                     <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                      <AbsoluteConstraints x="410" y="440" width="100" height="40"/>
+                      <AbsoluteConstraints x="410" y="440" width="110" height="40"/>
                     </Constraint>
                   </Constraints>
                 </Component>
                 <Component class="javax.swing.JButton" name="btnReporteTrabEq">
                   <Properties>
+                    <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                      <Font name="Berlin Sans FB" size="12" style="0"/>
+                    </Property>
+                    <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                      <Image iconType="3" name="/vista/imagenes/imprimir.png"/>
+                    </Property>
                     <Property name="text" type="java.lang.String" value="Reporte"/>
                   </Properties>
                   <Constraints>
