--- a/Speart/src/vista/paneles/proceso/PnlProcesos.form
+++ b/Speart/src/vista/paneles/proceso/PnlProcesos.form
@@ -59,7 +59,7 @@
               </Properties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="163" y="5" width="-1" height="-1"/>
+                  <AbsoluteConstraints x="270" y="10" width="-1" height="-1"/>
                 </Constraint>
               </Constraints>
 
@@ -263,6 +263,7 @@
                         </TitledBorder>
                       </Border>
                     </Property>
+                    <Property name="opaque" type="boolean" value="false"/>
                     <Property name="preferredSize" type="java.awt.Dimension" editor="org.netbeans.beaninfo.editors.DimensionEditor">
                       <Dimension value="[650, 70]"/>
                     </Property>
@@ -313,11 +314,11 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Berlin Sans FB" size="14" style="0"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="&lt;html&gt; Este m&#xf3;dulo permite realizar el ingreso de&lt;br&gt; procesos,  aqu&#xed; el Administrador podr&#xe1;&lt;br&gt; realizar las siguientes tareas: &lt;br&gt;&#xa;Ingresar, actualizar o eliminar procesos&lt;br&gt; con sus respectivas actividades,  &lt;br&gt;adem&#xe1;s le admitir&#xe1;  seleccionar a que puesto&lt;br&gt; responsable se le agregara la actividad ingresada.&lt;/html&gt;&#xa;"/>
+                <Property name="text" type="java.lang.String" value="&lt;html&gt; Este m&#xf3;dulo permite realizar el ingreso de&lt;br&gt; procesos,  aqu&#xed; el Administrador podr&#xe1;&lt;br&gt; realizar las siguientes tareas: &lt;br&gt;&#xa;ingresar, actualizar o eliminar procesos&lt;br&gt; con sus respectivas actividades,  &lt;br&gt;adem&#xe1;s le admitir&#xe1;  seleccionar a que puesto&lt;br&gt; responsable se le agregar&#xe1; la actividad ingresada.&lt;/html&gt;&#xa;"/>
               </Properties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="10" y="200" width="150" height="280"/>
+                  <AbsoluteConstraints x="30" y="160" width="170" height="280"/>
                 </Constraint>
               </Constraints>
             </Component>
@@ -364,7 +365,7 @@
               </Properties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="158" y="6" width="-1" height="-1"/>
+                  <AbsoluteConstraints x="290" y="40" width="-1" height="-1"/>
                 </Constraint>
               </Constraints>
 
@@ -496,11 +497,18 @@
                 </Component>
                 <Component class="javax.swing.JButton" name="btnReporteActiv">
                   <Properties>
+                    <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+                      <Font name="Berlin Sans FB" size="12" style="0"/>
+                    </Property>
+                    <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
+                      <Image iconType="3" name="/vista/imagenes/imprimir.png"/>
+                    </Property>
                     <Property name="text" type="java.lang.String" value="Reporte"/>
+                    <Property name="toolTipText" type="java.lang.String" value="Resporte de actividades y procesos"/>
                   </Properties>
                   <Constraints>
                     <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                      <AbsoluteConstraints x="280" y="320" width="120" height="40"/>
+                      <AbsoluteConstraints x="550" y="310" width="120" height="40"/>
                     </Constraint>
                   </Constraints>
                 </Component>
@@ -515,7 +523,7 @@
               </Properties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
-                  <AbsoluteConstraints x="10" y="130" width="140" height="260"/>
+                  <AbsoluteConstraints x="90" y="270" width="200" height="160"/>
                 </Constraint>
               </Constraints>
             </Component>
