--- a/Speart/src/vista/paneles/servicios/DialogoAgendaContactos.form
+++ b/Speart/src/vista/paneles/servicios/DialogoAgendaContactos.form
@@ -240,7 +240,7 @@
                 <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
                   <Font name="Berlin Sans FB" size="14" style="0"/>
                 </Property>
-                <Property name="text" type="java.lang.String" value="   Direccion:"/>
+                <Property name="text" type="java.lang.String" value="   Direcci&#xf3;n:"/>
               </Properties>
               <Constraints>
                 <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
