--- a/Speart/src/vista/paneles/usuario/DialogCambiaClave.form
+++ b/Speart/src/vista/paneles/usuario/DialogCambiaClave.form
@@ -42,6 +42,9 @@
       <SubComponents>
         <Component class="javax.swing.JLabel" name="lblClaveInterior1">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Berlin Sans FB" size="12" style="0"/>
+            </Property>
             <Property name="text" type="java.lang.String" value=" Clave anterior:"/>
           </Properties>
           <Constraints>
@@ -51,6 +54,9 @@
           </Constraints>
         </Component>
         <Component class="javax.swing.JPasswordField" name="txtClaveAnterior1">
+          <Properties>
+            <Property name="toolTipText" type="java.lang.String" value="Digitar su clave anterior"/>
+          </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
               <AbsoluteConstraints x="140" y="30" width="220" height="30"/>
@@ -59,6 +65,9 @@
         </Component>
         <Component class="javax.swing.JLabel" name="lblClaveNueva1">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Berlin Sans FB" size="12" style="0"/>
+            </Property>
             <Property name="text" type="java.lang.String" value=" Clave nueva:"/>
           </Properties>
           <Constraints>
@@ -68,6 +77,9 @@
           </Constraints>
         </Component>
         <Component class="javax.swing.JPasswordField" name="txtClaveNueva1">
+          <Properties>
+            <Property name="toolTipText" type="java.lang.String" value="DIgitar su clave nueva"/>
+          </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
               <AbsoluteConstraints x="140" y="70" width="220" height="30"/>
@@ -76,6 +88,9 @@
         </Component>
         <Component class="javax.swing.JLabel" name="lblConfirmClave1">
           <Properties>
+            <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
+              <Font name="Berlin Sans FB" size="12" style="0"/>
+            </Property>
             <Property name="text" type="java.lang.String" value="Confirme clave:"/>
           </Properties>
           <Constraints>
@@ -85,6 +100,9 @@
           </Constraints>
         </Component>
         <Component class="javax.swing.JPasswordField" name="txtComfirClave1">
+          <Properties>
+            <Property name="toolTipText" type="java.lang.String" value="Confirme su clave nueva"/>
+          </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
               <AbsoluteConstraints x="140" y="110" width="220" height="30"/>
