--- a/Speart/src/vista/paneles/usuario/DialogCompetTecnica.form
+++ b/Speart/src/vista/paneles/usuario/DialogCompetTecnica.form
@@ -148,7 +148,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Berlin Sans FB" size="18" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Competencias Tecnicas agregadas"/>
+            <Property name="text" type="java.lang.String" value="Competencias T&#xe9;cnicas agregadas"/>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
@@ -161,7 +161,7 @@
             <Property name="font" type="java.awt.Font" editor="org.netbeans.beaninfo.editors.FontEditor">
               <Font name="Berlin Sans FB" size="18" style="0"/>
             </Property>
-            <Property name="text" type="java.lang.String" value="Competencias Tecnicas a agregar:"/>
+            <Property name="text" type="java.lang.String" value="Competencias T&#xe9;cnicas a agregar:"/>
           </Properties>
           <Constraints>
             <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
